[gd_scene load_steps=7 format=3 uid="uid://co5llfp8c8u5o"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_tjgwi"]
[ext_resource type="PackedScene" uid="uid://cb10dexbgplab" path="res://scenes/upgrade_option.tscn" id="2_577sd"]
[ext_resource type="AudioStream" uid="uid://m5lfh6qiqacw" path="res://sounds/Cartoon Boing Sound Effect 2.mp3" id="2_fpcm2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_754s4"]
bg_color = Color(0.0177324, 0.0177324, 0.0177324, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ddjg"]
bg_color = Color(0.536828, 0.133077, 0.165845, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bf6yh"]
font_size = 60
font_color = Color(1, 0, 0, 1)
shadow_size = 11
shadow_color = Color(0, 0, 0, 0.819608)
shadow_offset = Vector2(5, 5)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tjgwi")

[node name="PlayerHealthBar" type="ProgressBar" parent="." groups=["player_health_bar"]]
texture_filter = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 13.0
offset_top = -43.0
offset_right = 497.0
offset_bottom = -13.0
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_754s4")
theme_override_styles/fill = SubResource("StyleBoxFlat_8ddjg")
max_value = 50.0
value = 50.0
show_percentage = false

[node name="PlayerHealthBarNumber" type="Label" parent="PlayerHealthBar" groups=["player_health_bar_number"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="LabelYouDied" type="Label" parent="." groups=["you_died_text"]]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -333.5
offset_top = -43.0
offset_right = 333.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
text = "YOUR NOT ALIVE"
label_settings = SubResource("LabelSettings_bf6yh")
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="DeathTextTimer" type="Timer" parent="LabelYouDied" groups=["death_text_timer"]]
unique_name_in_owner = true
wait_time = 0.05

[node name="XpBar" type="ProgressBar" parent="." groups=["xp_bar"]]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_right = 576.0
offset_bottom = 23.0
grow_horizontal = 2
show_percentage = false

[node name="LevelDisplay" type="Label" parent="XpBar" groups=["level_display"]]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -27.0
offset_right = 27.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Level 1"

[node name="LevelUp" type="Panel" parent="."]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 776.0
offset_right = 200.0
offset_bottom = 1376.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradeOption" parent="LevelUp" instance=ExtResource("2_577sd")]
unique_name_in_owner = true
layout_mode = 0

[node name="LevelUpSound" type="AudioStreamPlayer" parent="LevelUp"]
unique_name_in_owner = true
stream = ExtResource("2_fpcm2")
volume_db = -16.22
pitch_scale = 0.16

[connection signal="timeout" from="LabelYouDied/DeathTextTimer" to="." method="_on_death_text_timer_timeout"]

[editable path="LevelUp/UpgradeOption"]
